--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -1,1 +1,8 @@
+<% @products.each do |product| %>
+
+<%= product.cd_title %>
+
+<% end %>
+
+
  <%= link_to('Logout', destroy_admin_session_path, :method => :delete) %>
