--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,5 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<h1> 商品詳細画面（ユーザ側）</h1>
 
 <%= @product.cd_title %>
 
-<%= link_to "index", products_path %>
+<%= link_to "商品一覧へ", products_path %>
