--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,9 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<h1> 商品一覧画面（ユーザ側）</h1>
 
 <% @products.each do |product| %>
 
 <%= product.cd_title %>
 
-<%= link_to "Show", product_path(product) %>
+<%= link_to "商品の詳細" , product_path(product) %><br>
 
 <% end %>
