--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main-container {
+	background: image-url("cd_samurai.jpg");
+	height: 800px;
+	background-size: cover;
+	margin: 0 auto;
+
+	p,h1,h3 {
+	color: white;
+	text-align: center;
+	}
+
+	h1{
+	font-size: 50px;
+	}
+
+	h3{
+	padding: 50px;
+	font-size: 30px;
+	}
+
+	p{
+	padding: 60px;
+	font-size: 25px;
+	}
+}
