--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -21,9 +21,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <!-- <div class="actions">
+  <div class="actions">
     <%= f.submit "Sign up" %>
-  </div> -->
+  </div>
 <% end %>
 
 <%= render "admins/shared/links" %>
