--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.main-container {
-	background: image-url("cd_samurai.jpg");
+ .main-container {
+	background: image-url("cd_samurai.jp");
 	height: 800px;
 	background-size: cover;
 	margin: 0 auto;
