--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,3 +1,10 @@
 <h1> マイページ</h1>
+<div>
+ <label>性別 : <%= @client.gender_i18n %></label>
+</div>
+<div class="field">
+ <label>名前 : <%= @client.last_name %></label><br>
+ <label>メールアドレス : <%= @client.email %></label>
+</div>
 
-<%= @client.email %>
+<%= link_to "商品一覧へ", products_path %>
