--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,4 +2,10 @@
 
 <%= @product.cd_title %>
 
+<div>
+    <%= link_to product_carts_path(@product), method: :post do %>
+    <div>カートに入れる</div>
+    <% end %>
+</div>
+
 <%= link_to "商品一覧へ", products_path %>
