--- a/app/views/clients/registrations/new.html.erb
+++ b/app/views/clients/registrations/new.html.erb
@@ -38,19 +38,16 @@
 
 　<div class="field">
     <%= f.label "性別" %><br />
-   <label>
-<%= f.radio_button :gender, :man %> 男 </label>
-<label><%= f.radio_button :gender, :woman %> 女</label>
-<label><%= f.radio_button :gender, :custom %> その他</label>
+      <label><%= f.radio_button :gender, :man %> 男 </label>
+      <label><%= f.radio_button :gender, :woman %> 女</label>
+      <label><%= f.radio_button :gender, :custom %> その他</label>
   </div>
 
 <div class="field">
   <%= f.label "生年月日" %>
   <%= raw sprintf(
       f.date_select(
-        :birthday, use_month_numbers: true, start_year: 1930,end_year: (Time.now.year - 18), default: Date.new(1990, 1, 1),
-              date_separator: '%s'),
-            '年 ', '月 ') + '日' %>
+        :birthday, use_month_numbers: true, start_year: 1930,end_year: (Time.now.year - 18), default: Date.new(1990, 1, 1),date_separator: '%s'),'年 ', '月 ') + '日' %>
 </div>
 
   <div class="actions">
