--- a/app/views/admins/clients/index.html.erb
+++ b/app/views/admins/clients/index.html.erb
@@ -1,10 +1,19 @@
+<div>
+<%= link_to "商品一覧へ", admins_products_path %><br>
+<%= link_to "商品の追加" , new_admins_product_path %><br>
+<%= link_to "ユーザー情報一覧" , admins_clients_path %><br>
+</div>
+
 <h1> 商品一覧画面（管理者側）</h1>
 
 <% @clients.each do |client| %>
 
-<%= client.name %>
+<%= client.id %>
+<%= client.last_name + client.first_name %>
+<%= client.email %>
 
-<%= link_to "ユーザーページ" , admins_client_path(client) %><br>
+<%= link_to "詳細" , admins_client_path(client) %>
+<%= link_to "削除" , admins_client_path(client), method: :delete %><br>
 
 <% end %>
 
