--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -1,3 +1,9 @@
+<div>
+<%= link_to "商品一覧へ", admins_products_path %><br>
+<%= link_to "商品の追加" , new_admins_product_path %><br>
+<%= link_to "ユーザー情報一覧" , admins_clients_path %><br>
+</div>
+
 <h1> 商品一覧画面（管理者側）</h1>
 
 <% @products.each do |product| %>
