--- a/app/views/admins/products/new.html.erb
+++ b/app/views/admins/products/new.html.erb
@@ -1,3 +1,9 @@
+<div>
+<%= link_to "商品一覧へ", admins_products_path %><br>
+<%= link_to "商品の追加" , new_admins_product_path %><br>
+<%= link_to "ユーザー情報一覧" , admins_clients_path %><br>
+</div>
+
 <h1> 商品の新規追加</h1>
 
 <%= form_for [:admins, @product] do |f| %>
@@ -7,5 +13,3 @@
 
 	<%= f.submit '商品を追加' %>
 <% end %>
-
-<%= link_to "商品一覧へ", admins_products_path %>
