--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,10 +1,10 @@
 <h1> マイページ</h1>
 <div>
- <label>性別 : <%= @client.gender_i18n %></label>
+ <label>性別 : <%= @clients.gender_i18n %></label>
 </div>
 <div class="field">
- <label>名前 : <%= @client.last_name %></label><br>
- <label>メールアドレス : <%= @client.email %></label>
+ <label>名前 : <%= @clients.last_name + @clients.first_name %></label><br>
+ <label>メールアドレス : <%= @clients.email %></label>
 </div>
 
 <%= link_to "商品一覧へ", products_path %>
