--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <h1> Home画面</h1>
-<div class="main-container">
+<!-- <div class="main-container"> -->
 
 
 <h1>ようこそ！CD侍へ！</h1><br/>
@@ -24,7 +24,7 @@
 	是非こちらであなただけの最高の一枚と出会ってください。
 </p>
 
-</div>
+<!-- </div> -->
 
 
 <%= link_to "商品一覧へ", products_path %>
