--- a/app/views/admins/products/edit.html.erb
+++ b/app/views/admins/products/edit.html.erb
@@ -1,11 +1,6 @@
 <h1> 商品編集画面</h1>
 
-<%= form_for [:admins, @product] do |f| %>
-
-<%= f.text_field :cd_title %>
-
-<%= f.submit "商品を編集" %>
-
-<% end %>
+<%= render 'form', product: @product %>
 
 <%= link_to "商品の詳細" , admins_product_path(@product) %>
+<%= link_to "商品一覧へ", admins_products_path %>
