--- a/app/views/admins/products/new.html.erb
+++ b/app/views/admins/products/new.html.erb
@@ -1,11 +1,5 @@
 <h1> 商品の新規追加</h1>
 
-<%= form_for [:admins, @product] do |f| %>
-
-	<h4> CDタイトル</h4>
-	<%= f.text_field :cd_title %>
-
-	<%= f.submit '商品を追加' %>
-<% end %>
+<%= render 'form', product: @product %>
 
 <%= link_to "商品一覧へ", admins_products_path %>
