--- a/app/views/admins/products/show.html.erb
+++ b/app/views/admins/products/show.html.erb
@@ -1,7 +1,25 @@
 <h1> 商品詳細画面（管理者側）</h1>
 
-<%= @product.cd_title %>
+<p>
+<%= attachment_image_tag @product, :product_image, :fill, 200, 200 %><br>
+<strong>CD/アルバム名</strong>
+<%= @product.cd_title %><br>
+<strong>ディスク名</strong>
+<% @product.product_discs.each do |disc| %>
+	<%= disc.disc_title %><br>
 
+<% end %>
+
+<strong>アーティスト名</strong>
+<%= @product.artist_name %><br>
+<strong>レーベル名</strong>
+<%= @product.label_name %><br>
+<strong>価格</strong>
+<%= @product.price %>えん<br>
+<strong>在庫数</strong>
+<%= @product.stock %>こあるよ<br>
+
+</p>
 <%= link_to "商品の編集", edit_admins_product_path(@product) %>
 
 <%= link_to "商品の削除", admins_product_path(@product),
