--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -5,6 +5,22 @@
 <div class="field">
  <label>名前 : <%= @client.last_name %></label><br>
  <label>メールアドレス : <%= @client.email %></label>
+ <%= link_to '編集する', edit_client_path(@client)%>
 </div>
-
+<div>
+	<% @addresses.each do |address|%>
+	<%= address.to_name %>
+	<%= address.to_name_kana %>
+	<%= address.postal_code %>
+	<%= address.address %>
+	<%= address.tel_number %>
+    <%= link_to "変更", edit_address_path(address) %>
+    <%= link_to "削除", address_path(address), method: :delete %>
+	<%end%>
+</div>
+<div>
 <%= link_to "商品一覧へ", products_path %>
+</div>
+<div>
+<%= link_to "配送先を追加する", new_address_path %>
+</div>
